Fix popup extreme image cutoffs by card borders

--- a/styles/Events.module.scss
+++ b/styles/Events.module.scss
@@ -226,8 +226,7 @@
   border-top-left-radius: var(--border-radius);
   border-top-right-radius: var(--border-radius);
   width: 100%;
-  height: 25vw;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 a.gcal {
